crates/murphy-plugin-macros/tests/ui/fail_cop_generic_impl.stderr
error: #[cop] does not support generic impl blocks
  --> tests/ui/fail_cop_generic_impl.rs:10:5
   |
10 | impl<T: Default> Foo<T> {
   |     ^^^^^^^^^^^^

warning: unused import: `murphy_ast::NodeId`
 --> tests/ui/fail_cop_generic_impl.rs:1:5
  |
1 | use murphy_ast::NodeId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_generic_impl.rs:2:5
  |
2 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^
